# discord-bot

./: Cargo.toml
src/: active_incident.rs  consts.rs  logging.rs  main.rs  utils.rs
src/utils/: mod.rs  rw_save.rs
