[package]
name = "discord-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1.41.0", features = ["full"] }
serenity = { version = "0.12.2", features = ["collector"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde = { version = "1", features = ["derive"] }
